payroll slip download done commit by sumit

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "datatables.net": "^2.3.7",
     "datatables.net-bs5": "^2.3.7",
     "datatables.net-dt": "^2.3.7",
+    "html2canvas": "^1.4.1",
     "jquery": "^4.0.0",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
     "react": "19.2.3",
